<resources>

    <string name="app_name"></string>
    <string name="default_notification_channel_id">FCMID</string>
    <!--앱 접근 허용 스트링-->
    <string name="myhome_admin">확인</string>

    <!--로그인 페이지-->
    <string name="myhome_login">로그인</string>
    <string name="myhome_login_ID_Config">아이디 찾기</string>
    <string name="myhome_login_PW_Config">비밀번호 찾기</string>
    <string name="myhome_login_Join">회원가입</string>

    <!--로딩 페이지-->
    <string name="myhome_main_progressar">로딩중입니다.....</string>

    <!--ON OFF 글자-->
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>

    <!--선풍기 끄기-->
    <string name="fan_off">끄기</string>
    <!--on Off 한글-->
    <string name="korean_on">켜짐</string>
    <string name="korean_off">꺼짐</string>

    <!--기기등록 페이지 에 들어갈 말들-->
    <string name="brand">브랜드 명</string>
    <string name="categoiry">카테고리 명</string>
    <string name="device">제품 명</string>

    <!--검색 버튼-->
    <string name="search">검색</string>

    <!--선풍기 조절-->
    <string name="weak">약</string>
    <string name="mid">중</string>
    <string name="strong">강</string>


    <!--메뉴 글씨-->
    <string name="nav_menu_1">우리집 가족 보기</string>
    <string name="nav_menu_2">우리집 차트 보기</string>
    <string name="nav_menu_3">고객 지원 센터</string>
    <string name="nav_menu_4">로그아웃</string>

    <!--메뉴 ㅌ글-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="appwidget_title">우리집 JARVIS</string>
    <string name="add_widget">Add widget</string>



    <!--음성인식 페이지-->
    <string name="mic_page_title">음성 검색</string>
    <string name="str_start">Start</string>
    <string name="str_stop">Stop</string>

<<<<<<< HEAD

    <string name="id_overlap">중복 검사</string>
    <string name="find_ID_phone">가입한 핸드폰 번호를 입력해 주십시오</string>
    <string name="find_PW_phone">가입한 아이디와 핸드폰 번호를 입력해 주십시오</string>
=======
>>>>>>> bb3764c8d50d974cbd3fa01213ab9deb7b5d1f66
</resources>
