<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_item_family_list"
            android:icon="@drawable/family2"
            android:title="@string/nav_menu_1" />
        <item
            android:id="@+id/navigation_item_chart"

            android:icon="@drawable/chart2"
            android:title="@string/nav_menu_2" />

        <item
            android:id="@+id/navigation_item_support_center"

            android:icon="@drawable/support2"
            android:title="@string/nav_menu_3" />

        <item
            android:id="@+id/navigation_item_logout"
            android:icon="@drawable/logout2"
            android:title="@string/nav_menu_4" />


    </group>


</menu>