<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="267dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="93dp"
            android:layout_height="109dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="92dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cooler" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="114dp"
            android:layout_height="64dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/mainlogo" />

        <Button
            android:id="@+id/button_fan_strong"
            android:layout_width="68dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button"
            android:text="@string/strong"
            android:textColor="@color/myhomeFontColor"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <Button
            android:id="@+id/button_fan_mid"
            android:layout_width="68dp"
            android:layout_height="39dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button"
            android:text="@string/mid"
            android:textColor="@color/myhomeFontColor"
            app:layout_constraintStart_toEndOf="@+id/button_fan_strong"
            app:layout_constraintTop_toTopOf="@+id/button_fan_strong" />

        <Button
            android:id="@+id/button_fan_weak"
            android:layout_width="68dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/button"
            android:text="@string/weak"
            android:textColor="@color/myhomeFontColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toEndOf="@+id/button_fan_mid"
            app:layout_constraintTop_toTopOf="@+id/button_fan_mid" />

        <Button
            android:id="@+id/button_fan_off"
            android:layout_width="217dp"
            android:layout_height="39dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button"
            android:text="@string/fan_off"
            android:textColor="@color/myhomeFontColor"
            app:layout_constraintEnd_toEndOf="@+id/button_fan_weak"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/button_fan_strong" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>