<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_back"
                android:text="@string/categoiry"
                android:textColor="@color/myhomeFontColor"
                android:textSize="16sp" />

            <GridView
                android:id="@+id/grid_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:horizontalSpacing="8dp"
                android:numColumns="3"
                android:verticalSpacing="8dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_back"
                android:text="@string/brand"
                android:textColor="@color/myhomeFontColor" />

            <GridView
                android:id="@+id/grid_brand"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:horizontalSpacing="8dp"
                android:numColumns="3"
                android:verticalSpacing="8dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/text_back"
                android:text="@string/device"
                android:textColor="@color/myhomeFontColor" />

            <GridView
                android:id="@+id/device"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:numColumns="3"
                android:horizontalSpacing="8dp"
                android:verticalSpacing="8dp"
                android:layout_margin="8dp"/>
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>